package com.foodallergy.app.user;

public class Standard extends User {
    public Standard(UserEntity userEntity) {
        super(userEntity);
    }
}
